Done with Skills container

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,25 @@
         good- looking websites.
       </p>
     </section>
+    <section class="container skills">
+      <div class="heading">
+        <h3>Skills</h3>
+        <hr />
+      </div>
+      <p>
+        <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular.</br>
+        <b>• Server-side:</b> Node, Express, MongoDB.</br>
+        <b>• Design:</b> Adobe XD.</br>
+        <b>• Testing:</b> Jest, Enzyme.</br>
+        <b>• Less experience worth noting:</b> C#, SQL, .NET.
+      </p>
+      <img src="images/Laptop.png">
+    </section>
+    <section class="container projects">
+    <div class="heading">
+      <h3>Projects</h3>
+      <hr />
+    </div>
+  </section>
   </body>
 </html>
