Done with Projects container

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,44 @@
         <b>• Testing:</b> Jest, Enzyme.</br>
         <b>• Less experience worth noting:</b> C#, SQL, .NET.
       </p>
-      <img src="images/Laptop.png">
+      <img src="images/Laptop.png" alt="Laptop">
     </section>
     <section class="container projects">
     <div class="heading">
       <h3>Projects</h3>
       <hr />
+    </div>
+    <div class="card">
+      <div class="image"></div>
+      <div class="body">
+        <div class='text'>
+          <div class="card-heading">
+            <h4>Shoes Seller</h4>
+            <hr class="card-divider">
+          </div>
+          <p>A MERN Stack E-Commerce app.</p>
+        </div>
+        <div class="buttons">
+          <button class="btn demo">DEMO</button>
+          <button class="btn github">GITHUB</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image"></div>
+      <div class="body">
+        <div class='text'>
+          <div class="card-heading">
+            <h4>Portfolio</h4>
+            <hr>
+          </div>
+          <p>An HTML/CSS/JS portfolio website.</p>
+        </div>
+        <div class="buttons">
+          <button class="btn demo">DEMO</button>
+          <button class="btn github">GITHUB</button>
+        </div>
+      </div>
     </div>
   </section>
   </body>
