Done with the Footer

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
     <nav>
       <button class="toggler"><img src="images/NavButton.svg" /></button>
     </nav>
-    <section class="about">
+    <header>
       <h1>Hi! My name is <span>Stoyan.</span></h1>
       <p>
         I'm a <span>Front End Developer</span> and a learning Web Designer
         living in Sofia, Bulgaria. I like building simple, powerful, fast and
         good- looking websites.
       </p>
-    </section>
-    <section class="container skills">
+    </header>
+    <section class="skills container">
       <div class="heading">
         <h3>Skills</h3>
         <hr />
@@ -39,7 +39,7 @@
       </p>
       <img src="images/Laptop.png" alt="Laptop">
     </section>
-    <section class="container projects">
+    <section class="projects container">
     <div class="heading">
       <h3>Projects</h3>
       <hr />
@@ -77,5 +77,30 @@
       </div>
     </div>
   </section>
+  <footer>
+    <section>
+    <h6>SEND ME AN E-MAIL</h6>
+    <p>
+      I would love to hear from you at stoyanmanolovvv@gmail.com
+    </p>
+  </section>
+  <section>
+    <h6>CHECK MY GITHUB</h6>
+    <p>
+      Github.com/stoyanmanolov
+    </p>
+  </section>
+  <section>
+    <h6>MEET ME IN</h6>
+    <p>
+      Sofia, Bulgaria
+    </p>
+  </section>
+  <section>
+    <i class="fab fa-github"></i>
+    <i class="fab fa-facebook-f"></i>
+    <i class="fas fa-envelope"></i>
+  </section>
+  </footer>
   </body>
 </html>
