--- a/src/index.html
+++ b/src/index.html
@@ -14,93 +14,101 @@
     <title>Stoyan</title>
   </head>
   <body>
-    <nav>
-      <button class="toggler"><img src="images/NavButton.svg" /></button>
-    </nav>
-    <header>
-      <h1>Hi! My name is <span>Stoyan.</span></h1>
-      <p>
-        I'm a <span>Front End Developer</span> and a learning Web Designer
-        living in Sofia, Bulgaria. I like building simple, powerful, fast and
-        good- looking websites.
-      </p>
-    </header>
-    <section class="skills container">
+    <div id="content">
+      <nav>
+        <button id="toggler" class="toggler"><img src="images/NavButton.svg" /></button>
+      </nav>
+      <header>
+        <h1>Hi! My name is <span>Stoyan.</span></h1>
+        <p>
+          I'm a <span>Front End Developer</span> and a learning Web Designer
+          living in Sofia, Bulgaria. I like building simple, powerful, fast and
+          good- looking websites.
+        </p>
+      </header>
+      <section class="skills container">
+        <div class="heading">
+          <h3>Skills</h3>
+          <hr />
+        </div>
+        <p>
+          <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular.</br>
+          <b>• Server-side:</b> Node, Express, MongoDB.</br>
+          <b>• Design:</b> Adobe XD.</br>
+          <b>• Testing:</b> Jest, Enzyme.</br>
+          <b>• Less experience worth noting:</b> C#, SQL, .NET.
+        </p>
+        <img src="images/Laptop.png" alt="Laptop">
+      </section>
+      <section class="projects container">
       <div class="heading">
-        <h3>Skills</h3>
+        <h3>Projects</h3>
         <hr />
       </div>
-      <p>
-        <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular.</br>
-        <b>• Server-side:</b> Node, Express, MongoDB.</br>
-        <b>• Design:</b> Adobe XD.</br>
-        <b>• Testing:</b> Jest, Enzyme.</br>
-        <b>• Less experience worth noting:</b> C#, SQL, .NET.
-      </p>
-      <img src="images/Laptop.png" alt="Laptop">
-    </section>
-    <section class="projects container">
-    <div class="heading">
-      <h3>Projects</h3>
-      <hr />
-    </div>
-    <div class="card">
-      <div class="image"></div>
-      <div class="body">
-        <div class='text'>
-          <div class="card-heading">
-            <h4>Shoes Seller</h4>
-            <hr class="card-divider">
+      <div class="card">
+        <div class="image"></div>
+        <div class="body">
+          <div class='text'>
+            <div class="card-heading">
+              <h4>Shoes Seller</h4>
+              <hr class="card-divider">
+            </div>
+            <p>A MERN Stack E-Commerce app.</p>
           </div>
-          <p>A MERN Stack E-Commerce app.</p>
-        </div>
-        <div class="buttons">
-          <button class="btn demo">DEMO</button>
-          <button class="btn github">GITHUB</button>
+          <div class="buttons">
+            <button class="btn demo">DEMO</button>
+            <button class="btn github">GITHUB</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image"></div>
-      <div class="body">
-        <div class='text'>
-          <div class="card-heading">
-            <h4>Portfolio</h4>
-            <hr>
+      <div class="card">
+        <div class="image"></div>
+        <div class="body">
+          <div class='text'>
+            <div class="card-heading">
+              <h4>Portfolio</h4>
+              <hr>
+            </div>
+            <p>An HTML/CSS/JS portfolio website.</p>
           </div>
-          <p>An HTML/CSS/JS portfolio website.</p>
-        </div>
-        <div class="buttons">
-          <button class="btn demo">DEMO</button>
-          <button class="btn github">GITHUB</button>
+          <div class="buttons">
+            <button class="btn demo">DEMO</button>
+            <button class="btn github">GITHUB</button>
+          </div>
         </div>
       </div>
+      </section>
+      <footer>
+        <section>
+        <h6>SEND ME AN E-MAIL</h6>
+        <p>
+          I would love to hear from you at stoyanmanolovvv@gmail.com
+        </p>
+        </section>
+        <section>
+          <h6>CHECK MY GITHUB</h6>
+          <p>
+            Github.com/stoyanmanolov
+          </p>
+        </section>
+        <section>
+          <h6>MEET ME IN</h6>
+          <p>
+            Sofia, Bulgaria
+          </p>
+        </section>
+        <section>
+          <i class="fab fa-github"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fas fa-envelope"></i>
+        </section>
+      </footer>
     </div>
-  </section>
-  <footer>
-    <section>
-    <h6>SEND ME AN E-MAIL</h6>
-    <p>
-      I would love to hear from you at stoyanmanolovvv@gmail.com
-    </p>
-  </section>
-  <section>
-    <h6>CHECK MY GITHUB</h6>
-    <p>
-      Github.com/stoyanmanolov
-    </p>
-  </section>
-  <section>
-    <h6>MEET ME IN</h6>
-    <p>
-      Sofia, Bulgaria
-    </p>
-  </section>
-  <section>
-    <i class="fab fa-github"></i>
-    <i class="fab fa-facebook-f"></i>
-    <i class="fas fa-envelope"></i>
-  </section>
-  </footer>
+    <ul id="drawer">
+      <li>Home</li>
+      <li>About</li>
+      <li>Projects</li>
+      <li>Contacts</li>
+    </ul>
   </body>
 </html>
