Turning toggle to an X when the drawer is open

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
   <body>
     <div id="content">
       <nav>
-        <button id="toggler" class="toggler"><img src="images/NavButton.svg" /></button>
+        <button id="toggler" class="toggler">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
       </nav>
       <header>
         <h1>Hi! My name is <span>Stoyan.</span></h1>
