Added drawer transitions

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>Stoyan</title>
   </head>
   <body>
-    <div id="content">
+    <div id="content" class="content">
       <nav>
         <button id="toggler" class="toggler">
           <span class="bar"></span>
@@ -108,7 +108,7 @@
         </section>
       </footer>
     </div>
-    <ul id="drawer">
+    <ul id="drawer" class="drawer">
       <li>Home</li>
       <li>About</li>
       <li>Projects</li>
