Done styling for larger screens

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     <div id="content" class="content">
       <nav id="nav">
+        <h2 class="logo nav-item"><a href="#">PORTFOLIO</a></h2>
         <button id="toggler" class="toggler">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -28,7 +29,7 @@
         <p>
           I'm a <span>Front End Developer</span> and a learning Web Designer
           living in Sofia, Bulgaria. I like building simple, powerful, fast and
-          good- looking websites.
+          good-looking websites.
         </p>
       </header>
       <section id="skills" class="skills container">
@@ -84,29 +85,31 @@
       </div>
       </section>
       <footer id="footer">
-        <section>
-        <h6>SEND ME AN E-MAIL</h6>
-        <p>
-          I would love to hear from you at <br>stoyanmanolovvv@gmail.com
-        </p>
-        </section>
-        <section>
-          <h6>CHECK MY GITHUB</h6>
+        <div class="footer-content">
+          <section>
+          <h6>SEND ME AN E-MAIL</h6>
           <p>
-            Github.com/stoyanmanolov
+            I would love to hear from you at <br>stoyanmanolovvv@gmail.com
           </p>
-        </section>
-        <section>
-          <h6>MEET ME IN</h6>
-          <p>
-            Sofia, Bulgaria
-          </p>
-        </section>
-        <section>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fas fa-envelope"></i>
-        </section>
+          </section>
+          <section>
+            <h6>CHECK MY GITHUB</h6>
+            <p>
+              Github.com/stoyanmanolov
+            </p>
+          </section>
+          <section>
+            <h6>MEET ME IN</h6>
+            <p>
+              Sofia, Bulgaria
+            </p>
+          </section>
+          <section class="socials">
+            <a href="https://github.com/stoyanmanolov" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="mailto: stoyanmanolovvv@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+          </section>
+        </div>
       </footer>
     </div>
     <ul id="drawer" class="drawer"></ul>
