Reducing the font-size of the header paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           <hr />
         </div>
         <p data-aos="fade-down">
-          <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular.</br>
+          <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular (learning).</br>
           <b>• Server-side:</b> Node, Express, MongoDB.</br>
           <b>• Design:</b> Adobe XD.</br>
           <b>• Testing:</b> Jest, Enzyme.</br>
