Add up-to-date information

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     />
     <title>Stoyan</title>
   </head>
-  <body>
+  <body style="display: none;">
     <div id="content" class="content">
       <nav id="nav">
         <h2 class="logo nav-item"><a href="#">PORTFOLIO</a></h2>
@@ -36,11 +36,11 @@
           <hr />
         </div>
         <p data-aos="fade-down">
-          <b>• Client-side:</b> HTML, CSS, JavaScript, React, Angular (learning).</br>
-          <b>• Server-side:</b> Node, Express, MongoDB.</br>
-          <b>• Design:</b> Adobe XD.</br>
+          <b>• Programming languages:</b> Java, JavaScript.</br>
+          <b>• Frontend:</b> HTML, CSS, JavaScript, TypeScript, React, Angular.</br>
+          <b>• Backend:</b> Java (Spring), JavaScript (Node, Express).</br>
+          <b>• Database:</b> SQL (MySQL, PostgreSQL), NoSQL (MongoDB).</br>
           <b>• Testing:</b> Jest, Enzyme.</br>
-          <b>• Less experience worth noting:</b> C#, SQL, .NET.
         </p>
         <img src="images/Laptop.png" alt="Laptop" data-aos="fade-down">
       </section>
@@ -61,7 +61,7 @@
           <section>
             <h6>CHECK MY GITHUB</h6>
             <p>
-              Github.com/stoyanmanolov
+              github.com/stoyanmanolov
             </p>
           </section>
           <section>
