Add text information tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     />
     <title>Stoyan</title>
   </head>
-  <body style="display: none;">
+  <body>
     <div id="content" class="content">
       <nav id="nav">
         <h2 class="logo nav-item"><a href="#">PORTFOLIO</a></h2>
